# nozomi-speedy

./: Cargo.toml  README.md
persia-speedy-derive/: Cargo.toml
persia-speedy-derive/src/: lib.rs
src/: endianness.rs  ext_bytes.rs  ext_hashbrown.rs  ext_indexmap.rs  ext_ndarray.rs  ext_tinystr.rs  lib.rs  readable_impl.rs  reader.rs  utils.rs  writable_impl.rs  writer.rs
tests/: serialization_tests.rs
