[package]
name = "persia-speedy"
version = "0.7.3"
authors = ["Jan Bujak <j@exia.io>", "Xiangu Lian <admin@mail.xrlian.com>"]
repository = "https://github.com/koute/speedy"
homepage = "https://github.com/koute/speedy"
documentation = "https://docs.rs/speedy/*/speedy/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["serialization"]
categories = ["encoding"]
description = "A fast binary serialization framework"
edition = "2018"

[dependencies]
persia-speedy-derive = { version = "= 0.7.3", path = "persia-speedy-derive", optional = true }
chrono = { version = "0.4", optional = true }
smallvec = { version = "1", optional = true }

[dev-dependencies]
quickcheck = "0.9"

[profile.release]
panic = "abort"

[workspace]
members = [".", "persia-speedy-derive", "static-tests"]

[features]
default = ["persia-speedy-derive"]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]
